# coding-agent-plugins

./: .gitignore  .mdtokenrc.yaml  .pre-commit-config.yaml  README.md
.claude-plugin/: marketplace.json
agents/: README.md
agents/.claude-plugin/: plugin.json
agents/agents/: auditor.md
agents/commands/: serena.md
codex/: README.md
content-marketing/: README.md
content-marketing/.claude-plugin/: plugin.json
content-marketing/agents/: author.md  editor.md
content-marketing/commands/: draft.md  outline.md  position.md  research.md  review.md  website-landing.md  website-service.md
core/.claude-plugin/: README.md  (+1 more)
deferred/: README.md
development/: README.md
diagrams/: README.md
docs/: MIGRATING_AGENTS.md  UPDATING_PLUGINS.md
hooks/: README.md  ruff-check-hook.sh
marketing/: README.md
memory/: README.md
ml3t-coauthor/: README.md
ml3t-researcher/: README.md
observer/: README.md
references/: README.md  pyproject.toml
references/.claude-plugin/: plugin.json
references/commands/: ref-chapter.md  ref-status.md  ref-sync.md
references/lib/: __init__.py  cli.py  parser.py
references/skills/reference-workflow/: SKILL.md  citation-format.md
references/skills/research-write/: extraction-patterns.md
roborev/: README.md
scripts/: sync-from-toolkit.sh
setup/: README.md
structured-intelligence/: README.md
system/: README.md
transition/: README.md
web-development/: DESIGN_ENHANCEMENT_v1.1.0.md  ENABLED_PROJECTS.md  QUICK_START.md  README.md
workflow/: README.md
writing-skills/: README.md  anti-consultant-web-copy.md
(+265 files in other folders)
