[project]
name = "references-plugin"
version = "1.0.0"
description = "Academic reference management with Zotero integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

# Core dependencies - none required for basic operation
dependencies = []

[project.optional-dependencies]
# Zotero API access (alternative to local SQLite)
zotero = ["pyzotero>=1.5.0"]

# PDF parsing with Marker
marker = ["marker-pdf>=1.0.0"]

# AI summarization with Gemini
summarize = [
    "google-generativeai>=0.3.0",
    "json-repair>=0.1.0"
]

# Vector search with Qdrant (optional)
search = [
    "qdrant-client>=1.7.0",
    "openai>=1.0.0"
]

# All optional dependencies
all = [
    "references-plugin[zotero,marker,summarize,search]"
]

[project.scripts]
refs = "lib.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
